Fix alignment of header elements by putting in a container

--- a/css/style.css
+++ b/css/style.css
@@ -6606,29 +6606,100 @@ table .checkbox input[type="checkbox"] {
   padding: 0;
   margin: 0;
 }
-.navbar-default .navbar-nav {
+.navbar-default .primary-nav {
   background-color: #f80400;
   width: 100%;
   font-size: 18px;
   margin: 0;
 }
-.navbar-default .navbar-nav > .leaf > a,
-.navbar-default .navbar-nav > .leaf > a:hover,
-.navbar-default .navbar-nav > .leaf > a:focus {
+.navbar-default .primary-nav .navbar-nav {
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.navbar-default .primary-nav .navbar-nav:before,
+.navbar-default .primary-nav .navbar-nav:after {
+  content: " ";
+  display: table;
+}
+.navbar-default .primary-nav .navbar-nav:after {
+  clear: both;
+}
+.navbar-default .primary-nav .navbar-nav:before,
+.navbar-default .primary-nav .navbar-nav:after {
+  content: " ";
+  display: table;
+}
+.navbar-default .primary-nav .navbar-nav:after {
+  clear: both;
+}
+@media (min-width: 768px) {
+  .navbar-default .primary-nav .navbar-nav {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  .navbar-default .primary-nav .navbar-nav {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  .navbar-default .primary-nav .navbar-nav {
+    width: 1170px;
+  }
+}
+.navbar-default .primary-nav .navbar-nav > .leaf > a,
+.navbar-default .primary-nav .navbar-nav > .leaf > a:hover,
+.navbar-default .primary-nav .navbar-nav > .leaf > a:focus {
   color: white;
   background-color: #f80400;
   font-weight: bold;
 }
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus {
+.navbar-default .primary-nav .navbar-nav > .active > a,
+.navbar-default .primary-nav .navbar-nav > .active > a:hover,
+.navbar-default .primary-nav .navbar-nav > .active > a:focus {
   color: white;
   background-color: #444444;
   font-weight: bold;
 }
 .navbar-default .navbar-header {
-  margin: 0;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
   padding-bottom: 30px;
+}
+.navbar-default .navbar-header:before,
+.navbar-default .navbar-header:after {
+  content: " ";
+  display: table;
+}
+.navbar-default .navbar-header:after {
+  clear: both;
+}
+.navbar-default .navbar-header:before,
+.navbar-default .navbar-header:after {
+  content: " ";
+  display: table;
+}
+.navbar-default .navbar-header:after {
+  clear: both;
+}
+@media (min-width: 768px) {
+  .navbar-default .navbar-header {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  .navbar-default .navbar-header {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  .navbar-default .navbar-header {
+    width: 1170px;
+  }
 }
 .navbar-default .navbar-header .logo {
   max-width: 35%;
